# Ros_SelfLearning

./: .gitignore  README.md
..bfg-report/2025-10-25/16-02-24/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_srvcli/: CMakeLists.txt  package.xml
src/ly-ros/src/behavior_tree/module/: Area.hpp  BasicTypes.hpp  Counter.hpp  GDB.code-workspace  ROSTools.hpp  Random.hpp  Rate.hpp  SineWave.hpp
src/ly-ros/src/gimbal_driver/: CMakeLists.txt  main.cpp  package.xml
src/ly-ros/src/gimbal_driver/module/: GDB.code-workspace  ROSTools.hpp  ros2_ly_ws.code-workspace
src/ly-ros/src/gimbal_driver/msg/: GameData.msg  GimbalAngles.msg  UWBPos.msg  Vel.msg
src/my_package/: CMakeLists.txt  package.xml
src/my_package_c/: CMakeLists.txt  package.xml
src/my_package_py/: package.xml  setup.py
src/my_package_py/my_package_py/: publisher.py
src/tutorial_interfaces/: CMakeLists.txt  package.xml
